--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <style>
       body{
         text-align: center;
+        background: black;
       }
 
       #eleme{
         width: 600px;
         height: 800px;
-        border: 1px #d8d8d8 solid;
-        margin-top: 50px;
       }
     </style>
   </head>
